--- a/backend/.env
+++ b/backend/.env
@@ -5,3 +5,8 @@ MONGODB_CONNECTION=mongodb+srv://haroldwren07:FGrdeIKASICb7wbz@cluster0.qn0ut6w.
 AUTH0_AUDIENCE=mern-food-order-api
 AUTH0_BASE_URL=https://dev-sttlwjxbf82ebrpe.us.auth0.com/
 
+
+#Cloudinary
+CLOUDINARY_CLOUD_NAME=dyek1w4dj
+CLOUDINARY_API_KEY=557439591658276
+CLOUDINARY_API_SECRET=gxAEZMW5kVBEIWu48739L8i29Dk
