--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,8 @@
   "description": "",
   "dependencies": {
     "@types/morgan": "^1.9.9",
+    "@types/multer": "^1.4.11",
+    "cloudinary": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
@@ -20,6 +22,7 @@
     "mongodb": "^6.6.1",
     "mongoose": "^8.3.4",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "winston": "^3.13.0",
     "zod": "^3.23.8"
   },
