--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "react-hook-form": "^7.51.4",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.23.1",
+    "react-spinners": "^0.13.8",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
