--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "json-form-data": "^1.7.2",
     "lucide-react": "^0.378.0",
     "next-themes": "^0.3.0",
     "react": "^18.2.0",
@@ -35,6 +36,7 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^6.23.1",
     "react-spinners": "^0.13.8",
+    "react-toastify": "^10.0.5",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
