--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "main": "./src/index.ts",
   "scripts": {
     "dev": "nodemon",
-    "start":"ts-node src/index.ts"
+    "start": "ts-node src/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -24,6 +24,7 @@
     "mongoose": "^8.3.4",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "stripe": "^16.2.0",
     "winston": "^3.13.0",
     "zod": "^3.23.8"
   },
